--- a/styles/main.scss
+++ b/styles/main.scss
@@ -51,9 +51,7 @@ header {
   }
 }
 
-.nýleg,
-.kennslumyndbönd,
-.skemmtimyndbönd {
+.video-title {
   h2 {
     font-family: arial, sans-serif;
     font-size: 24px;
@@ -62,37 +60,37 @@ header {
   }
 }
 
+.myndband-title {
+  p {
+    color: #000;
+    font-family: arial, sans-serif;
+    font-size: 1.1em;
+    font-weight: 700;
+    padding-right: 10px;
+  }
+}
+
 .myndband-poster {
   padding-bottom: 20px;
-
-  .myndband-title {
-    p {
-      color: #000;
-      font-family: arial, sans-serif;
-      font-size: 1.1em;
-      font-weight: 700;
-      padding-right: 10px;
-    }
-  }
 
   .image {
     color: #fff;
     padding-right: 20px;
     position: relative;
     text-align: center;
+  }
+}
 
-    .myndband-poster-time {
-      background: rgba(0, 0, 0, 0.5);
-      bottom: 15px;
-      padding: 0.3em;
-      position: absolute;
-      right: 25px;
+.myndband-poster-time {
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 15px;
+  padding: 0.3em;
+  position: absolute;
+  right: 25px;
 
-      p {
-        color: #fff;
-        font-family: arial, sans-serif;
-      }
-    }
+  p {
+    color: #fff;
+    font-family: arial, sans-serif;
   }
 
   img {
