--- a/styles/main.scss
+++ b/styles/main.scss
@@ -111,3 +111,19 @@ header {
   margin-bottom: 30px;
   margin-top: 30px;
 }
+
+.error {
+  background-color: rgba(214, 214, 194, 0.267);
+  font-family: arial, sans-serif;
+  margin-top: 4rem;
+  text-align: center;
+
+  h1 {
+    margin-bottom: 2rem;
+  }
+
+  h2 {
+    font-size: medium;
+    font-weight: 100;
+  }
+}
