--- a/views/error.ejs
+++ b/views/error.ejs
@@ -9,5 +9,6 @@
 <body class = "error">
     <h1>The page you're looking for does not exist!</h1>
     <h2>Cannot find <%= url %></h2>
+    <%- include('footer2') -%>
 </body>
 </html>
